--- a/style.css
+++ b/style.css
@@ -1,12 +1,18 @@
-.header {
-    background-color: orange;
-    color:royalblue;
-    font-size:29px;
-    text-align: center;
-    padding: 10px;
+body {
+    margin:0;
 }
-ul {
-    background-color: aquamarine;
-    color:red;
-    font-size:25px;
+.container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px, rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+    }
+.logo,.userIcon{
+    width:50px;
+    height:50px;
+    border-radius: 50%;
+}
+input {
+    width:90%;
+    padding:7px;
 }
