--- a/style.css
+++ b/style.css
@@ -102,3 +102,22 @@ a {
 .btn-search {
   margin-left:3px;
 }
+/* task 2 colorchange */
+.containerTask {
+  width:500px;
+  height:200px;
+  background-color:wheat;
+  margin:0 auto;
+}
+.mediumContainer {
+  display: flex;
+  height:180px;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+}
+.colorOrange,.colorRed {
+  width:100px;
+  height: 70px;
+  border:1px solid white;
+}
